--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,17 @@ readme = "README.md"
 packages = [{include = "ml_playground", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.9"
+pandas = "^2.2.1"
+tensorflow = "^2.16.1"
+torch = "^2.2.2"
+matplotlib = "^3.8.4"
+seaborn = "^0.13.2"
+plotly = "^5.20.0"
+cufflinks = "^0.17.3"
+chart-studio = "^1.1.0"
+scikit-learn = "^1.4.1.post1"
+jupyter = "^1.0.0"
 
 
 [build-system]
